# claude-code-permissions-hook

./: .gitignore  Cargo.toml  LLM_FALLBACK.md  LLM_TEST_PLAN.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  README.md  SECTIONED_CONFIG_IMPLEMENTATION_PLAN.md  WRITE_OPERATIONS_SUMMARY.md  claude_query_examples.md  decision_reviewer_design_summary.md  decision_reviewer_implementation_plan.md  example.toml  llm-fallback-config.toml  llm_test_report.md  llm_test_results.csv  next_steps.md  test-llm-config.toml
docs/: write-operations-design.md  write-operations-quick-reference.md
logrotate.d/: claude-code-hook
src/: config.rs  hook_io.rs  llm_safety.rs  logging.rs  main.rs  matcher.rs
tests/: README.md  bash_allowed.json  bash_injection.json  llm_test_cases.csv  read_allowed.json  read_path_traversal.json  test_safe_cargo.json  test_safe_read.json  test_unsafe_bash.json  unknown_tool.json
