[package]
name = "claude-code-permissions-hook"
version = "0.1.0"
edition = "2024"
authors = ["Korny Sietsma <korny@sietsma.com>"]
readme = "README.md"
# license = "MIT"  # https://spdx.org/licenses/
# categories = [] # https://crates.io/category_slugs
# keywords = [] # free text


[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
derive_builder = "0.20.2"
lazy_static = "1.5.0"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.11"
nix = { version = "0.29", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "time", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
csv = "1.4"
rand = "0.8"
[dev-dependencies]
pretty_assertions = "1.4.1"
